--- a/app/page.module.css
+++ b/app/page.module.css
@@ -7,6 +7,15 @@
   min-height: 100vh;
 }
 
+.link {
+  display: flex;
+  flex-direction: column;
+  padding: 60px 0 20px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
